# silkterm

./: .gitignore  Cargo.toml  DONATE.md  FAQ.md  README.md  build.md  code_of_conduct.md  contributing.md  deny.toml  info  install.bash  install.ps1  prerequisites.md  rust-toolchain.toml  style-guide.md
.cargo/: config.toml
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cicd/: cicd-win.ps1  cicd.bash  config.bash
cicd/packaging/linux/: silkterm.desktop
cicd/packaging/windows/: installer.nsi.in
cicd/tests/scroll/: README.md  analyze.py  run.bash
cicd/tests/scroll/scenes/: scene.bash
cicd/utility/: flame-report.py  git-auto-msg.bash  gui-headless.bash  lint-report.bash  n8git_backup-and-publish  n8output-random-unicode.py  release.bash  screenshots.bash
cicd/utility/demo-video/: demo-video.py
cicd/utility/demo-video/sounds/: LICENSES.txt
cicd/utility/include/: gfs-rotate.bash
design_docs/: project.md
examples/: glyphon_gl.rs
filesystem/: readme.txt
project/: backlog.md  design.md
source/: Cargo.toml  build.rs
source/assets/: silkterm.rc  silkterm.rc.in
source/diagnostics/: glyphon_gl.rs
source/src/: app.rs  bgimage.rs  cli.rs  clipboard.rs  config.rs  contrast.rs  ctl.rs  dialog.rs  gfx.rs  glow.rs  input.rs  main.rs  palette.rs  pane.rs  scrim.rs  scroll.rs  settings_ui.rs  sysfont.rs  term.rs  text.rs  theme.rs
src/: app.rs  cli.rs  clipboard.rs  config.rs  dialog.rs  glow.rs  input.rs  main.rs  palette.rs  pane.rs  scroll.rs  settings_ui.rs  sysfont.rs  term.rs  text.rs  theme.rs
tools/: n8output-random-unicode.py  rename.sh
tools/git-hooks/: pre-commit
utility/: n8runterm  n8runterm.ps1  rename.bash  rename.sh  screenshots.bash
utility/git-hooks/: pre-commit  pre-push
