# Virtual workspace: the crate lives in source/ (Cargo.toml + src/ + diagnostics/).
# Build/test/run from this root as before; Cargo.lock and target/ stay here.
[workspace]
members = ["source"]
resolver = "3"

# Clippy gate (cicd lints stage runs -D warnings). The allows are deliberate
# house style, not suppressed problems: nested ifs read better than && chains
# here, and the flagged fns/enums are shaped by wgpu/winit API reality.
[workspace.lints.clippy]
collapsible_if = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
large_enum_variant = "allow"

# Profiles only take effect in the workspace root manifest, so they live here,
# not in source/Cargo.toml.

# Balance size and runtime speed (slight nod to size). opt-level stays 3 - the
# owner cares about runtime speed, and the size wins below cost nothing there.
# NOTE: do NOT pack with UPX/etc - packers routinely trip antivirus heuristics.
[profile.release]
opt-level = 3        # keep the renderer/PTY hot paths fast
lto = "fat"          # whole-program inlining: usually smaller AND faster than thin
codegen-units = 1    # better cross-module optimization (also a bit smaller)
panic = "abort"      # drop unwinding tables - sizable shrink, fine for a GUI app
strip = true         # strip symbols

# Full debuginfo makes the debug binary ~285M and target/debug multi-GB. We debug
# via panic backtraces + eprintln, not a variable-inspecting debugger, so keep
# line tables (file:line in backtraces) and drop the rest. Set debug=true if you
# ever need full gdb/lldb. No effect on rebuild speed.
[profile.dev]
debug = "line-tables-only"

# Used only by the cicd profiler stage (cargo build --profile profiling
# --features profiling). Optimized like release so the flamegraph reflects real
# perf, but keeps symbols + debuginfo (release strips them) so frames are named.
[profile.profiling]
inherits = "release"
strip = false
debug = true
