# Virtual workspace: the crate lives in source/ (Cargo.toml + src/ + diagnostics/).
# Build/test/run from this root as before; Cargo.lock and target/ stay here.
[workspace]
members = ["source"]
resolver = "3"

# Clippy gate (cicd lints stage runs -D warnings). pedantic is on; the allows
# below are deliberate house style, not suppressed problems.
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Shaped by wgpu/winit API reality or plain readability here.
collapsible_if = "allow"        # nested ifs read better than && chains here
too_many_arguments = "allow"
type_complexity = "allow"
large_enum_variant = "allow"

# Pixel/grid/easing math casts and exact sentinel float compares are pervasive
# and intentional. Rewriting each site (try_from().unwrap(), From, epsilon
# compares) adds noise, not clarity - where an epsilon is meant, the code uses
# an explicit one (SETTLE_EPS).
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
float_cmp = "allow"

# Big render/build/layout fns are cohesive; splitting for a line count alone
# would scatter tightly-coupled state.
too_many_lines = "allow"

# Config/Settings-style structs legitimately carry many independent toggles.
struct_excessive_bools = "allow"

# `..Default::default()` in struct-update reads better than naming the type.
default_trait_access = "allow"

# A function-scoped `use Enum::*` right before an exhaustive match reads better
# than a 30-variant explicit import list.
enum_glob_use = "allow"

# Color/geometry math uses the conventional short names (r/g/b, x/y/w/h, sx/sy);
# spelling them out fights the domain and the project's own naming style.
similar_names = "allow"
many_single_char_names = "allow"

# CLI optional-value args are a genuine tri-state: absent / present-empty /
# present-with-value. Option<Option<T>> models that directly.
option_option = "allow"

# Profiles only take effect in the workspace root manifest, so they live here,
# not in source/Cargo.toml.

# Balance size and runtime speed (slight nod to size). opt-level stays 3 - the
# runtime speed matters, and the size wins below cost nothing there.
# NOTE: do NOT pack with UPX/etc - packers routinely trip antivirus heuristics.
[profile.release]
opt-level = 3        # keep the renderer/PTY hot paths fast
lto = "fat"          # whole-program inlining: usually smaller AND faster than thin
codegen-units = 1    # better cross-module optimization (also a bit smaller)
panic = "abort"      # drop unwinding tables - sizable shrink, fine for a GUI app
strip = true         # strip symbols

# Full debuginfo makes the debug binary ~285M and target/debug multi-GB. We debug
# via panic backtraces + eprintln, not a variable-inspecting debugger, so keep
# line tables (file:line in backtraces) and drop the rest. Set debug=true if you
# ever need full gdb/lldb. No effect on rebuild speed.
[profile.dev]
debug = "line-tables-only"

# Used only by the cicd profiler stage (cargo build --profile profiling
# --features profiling). Optimized like release so the flamegraph reflects real
# perf, but keeps symbols + debuginfo (release strips them) so frames are named.
[profile.profiling]
inherits = "release"
strip = false
debug = true
