[package]
name = "silkterm"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Smooth-scrolling GUI terminal emulator with split panes"
license = "GPL-2.0-or-later"
repository = "https://github.com/jim-collier/silkterm"

[[bin]]
name = "silkterm"
path = "src/main.rs"

# Dev-only diagnostic (not a usage example): a headless probe that renders glyphon
# text on a native wgpu-GL device, to bisect GL/transparency text-render regressions.
# Lives in diagnostics/, not examples/. Wired as a Cargo "example" only because that
# target type stays out of `cargo build --release` (zero shipped-binary cost) yet runs
# on demand: `cargo run --example glyphon_gl` (compile-checked by `cargo test`).
[[example]]
name = "glyphon_gl"
path = "diagnostics/glyphon_gl.rs"

[dependencies]
alacritty_terminal = "0.26"
wgpu = "29"
winit = "0.30"
glyphon = "0.11"
pollster = "0.4"
raw-window-handle = "0.6"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
copypasta = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# X11 per-pixel transparency: wgpu's GLES surface can't bind the window's ARGB
# visual, so create a transparent GL context with glutin and run wgpu on it
# (hal external interop). Cross-platform crate; only used on X11 at runtime.
glutin = "0.32"
glutin-winit = "0.5"

# Profiler stage of the local CI/CD (cicd/). Dev-only: optional + feature-gated,
# so it never compiles into a normal/release build (zero shipped-binary cost).
# LICENSE: pprof pulls inferno (CDDL-1.0, GPL-incompatible) - fine for local dev
# tooling, but binaries built with --features profiling must never be shipped.
# In-process sampling (SIGPROF) -> flamegraph SVG; sidesteps perf_event_paranoid.
# Linux-only path (cicd builds with --features profiling on this box).
pprof = { version = "0.14", features = ["flamegraph"], optional = true }

[features]
profiling = ["dep:pprof"]

# X11: set _KDE_NET_WM_BLUR_BEHIND_REGION so a KWin/picom compositor blurs the
# desktop behind the translucent window (transparent_background_blur).
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"

# Unix: tcgetpgrp() on the PTY master to read the foreground program for tab titles.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Profiles (release/dev/profiling) live in the workspace root Cargo.toml -
# Cargo ignores profile sections in member crates.

# windows: detect the system font size (no console window in release is set in main.rs)
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }

[package.metadata.silkterm]
note = "see build.md for cross-compile + macOS instructions"
